--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <!-- Open Graph meta tags -->
+    <meta property="og:title" content="Tra Ngan" />
+    <meta property="og:description" content="Graduation Celebration" />
+    <meta property="og:image" content="https://graduation-alpha-blond.vercel.app/images/img4.jpg" />
+    <meta property="og:url" content="https://graduation-alpha-blond.vercel.app" />
+    <meta property="og:type" content="website" />
+
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta
       name="description"
