--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!-- Open Graph meta tags -->
-    <meta property="og:title" content="Tra Ngan" />
-    <meta property="og:description" content="Graduation Celebration" />
-    <meta property="og:image" content="https://graduation-alpha-blond.vercel.app/images/img4.jpg" />
+    <meta property="og:title" content="Tra Ngan - Graduation Celebration" />
+    <meta property="og:description" content="Join us in celebrating Tra Ngan's graduation ceremony" />
+    <meta property="og:image" content="%PUBLIC_URL%/images/img4.jpg" />
     <meta property="og:url" content="https://graduation-alpha-blond.vercel.app" />
     <meta property="og:type" content="website" />
+
+    <!-- Twitter Card meta tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Tra Ngan - Graduation Celebration" />
+    <meta name="twitter:description" content="Join us in celebrating Tra Ngan's graduation ceremony" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/images/img4.jpg" />
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Join us in celebrating Tra Ngan's graduation ceremony"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
     <!--
