--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <!-- Open Graph meta tags -->
     <meta property="og:title" content="Tra Ngan - Graduation Celebration" />
     <meta property="og:description" content="Join us in celebrating Tra Ngan's graduation ceremony" />
-    <meta property="og:image" content="%PUBLIC_URL%/images/img4.jpg" />
+    <meta property="og:image" content="%PUBLIC_URL%/images/avt.jpg" />
     <meta property="og:url" content="https://graduation-alpha-blond.vercel.app" />
     <meta property="og:type" content="website" />
 
@@ -16,7 +16,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Tra Ngan - Graduation Celebration" />
     <meta name="twitter:description" content="Join us in celebrating Tra Ngan's graduation ceremony" />
-    <meta name="twitter:image" content="%PUBLIC_URL%/images/img4.jpg" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/images/avt.jpg" />
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta
